--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME=StoryTime
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost:8088
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -22,13 +22,13 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=forum
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=story_time
+DB_USERNAME=laravel
+DB_PASSWORD=secret
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -38,15 +38,15 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
-CACHE_PREFIX=
+CACHE_STORE=redis
+CACHE_PREFIX=story_time_cache
 
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_HOST=redis
 REDIS_PORT=6379
+REDIS_PASSWORD=secret
 
 MAIL_MAILER=log
 MAIL_HOST=127.0.0.1
