--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -20,6 +20,20 @@ server{
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
 
+    location /storage/ {
+        alias /var/www/html/storage/app/public/;
+        access_log off;
+        log_not_found off;
+    }
+
+    location /vite/ {
+            proxy_pass http://localhost:5173;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+        }
+
     location ~ /\.(?!well-known).* {
             deny all;
         }
