--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -37,4 +37,13 @@ server{
     location ~ /\.(?!well-known).* {
             deny all;
         }
+    location ~ ^/(app|bootstrap|config|database|resources|routes|storage|tests)/(.*) {
+            deny all;
+            return 404;
+        }
+    location ~ \.(env|log|json|lock|git|sh|yaml|yml|twig|xml|bak|swp)$ {
+            deny all;
+            return 404;
+        }
+
 }
