--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.2.0",
-        "date-fns": "^4.1.0"
+        "@tiptap/extension-link": "^2.10.3",
+        "@tiptap/extension-placeholder": "^2.10.3",
+        "@tiptap/pm": "^2.10.3",
+        "@tiptap/starter-kit": "^2.10.3",
+        "@tiptap/vue-3": "^2.10.3",
+        "date-fns": "^4.1.0",
+        "remixicon": "^4.5.0",
+        "tiptap-markdown": "^0.8.10"
     }
 }
