--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,3 +90,17 @@ services:
         ports:
             - "6379:6379"
         command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+
+    meilisearch:
+        image: getmeili/meilisearch:latest
+        container_name: meilisearch
+        ports:
+            - "7700:7700"
+        environment:
+            MEILI_MASTER_KEY: ${MEILISEARCH_KEY} # Opcjonalne: ustawienie klucza master
+        networks:
+            - dev-net
+        volumes:
+            - meili_data:/data.ms
+volumes:
+    meili_data:
