Fixing bugs, prep for live demo, finishing leftovers

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -37,7 +37,7 @@ server{
     location ~ /\.(?!well-known).* {
             deny all;
         }
-    location ~ ^/(app|bootstrap|config|database|resources|routes|storage|tests)/(.*) {
+    location ~ ^/(app|bootstrap|config|database|resources|routes|tests)/(.*) {
             deny all;
             return 404;
         }
