--- a/.env.prod.example
+++ b/.env.prod.example
@@ -25,7 +25,7 @@ DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=storytime
-DB_USERNAME=apps
+DB_USERNAME=user_storytime
 DB_PASSWORD=
 
 SESSION_DRIVER=redis
